Revision history for App-Pocoirc

{{$NEXT}}

0.37  Mon Apr 25 23:59:48 GMT 2011
    - Preserve symlinks in all supplied filenames
    - When using --trace, print the name (e.g. ERR_NICKNAMEINUSE) of every
      numberic event
    - Rename -i/--ircname to -r/--realname
    - Quit messages were not getting delivered to IRC servers. Fixed.
    - Add -i/--interactive which allows the user to call methods from
      the command line. Depend on POE 1.310 and POE::Component::IRC 6.61
      for related bugfixes, as well as Data::Dump for dumping return
      values of method calls.

0.36  Sat Apr 2 01:36:16 GMT 2011
    - Fix -V/--version, it was always returning "dev-git"

0.35  Sat Apr 2 00:22:39 GMT 2011
    - Allow using a short name (e.g. Qnet::State) with --class
    - Fix error in documentation about the default component class

0.34  Fri Dec 3 06:51:23 GMT 2010
    - Convert library directories (--lib) into absolute paths, so they'll still
      work after daemonization (which implies chdir()ing)
    - Use Class::Load instead of C<eval "require $class">. Safer on Perl <5.10.

0.33  Wed Nov 3 02:06:44 GMT 2010
    - Rely on POE::Component::IRC 6.50's shutdown code instead of handling it
      ourselves
    - Include irc_raw_out events in verbose output

0.32  Sun Oct 31 17:47:21 GMT 2010
    - Redirect STDOUT/STDERR to the log file (if any) when daemonized
    - Allow log_file and pid_file to be relative paths when daemonizing

0.31  Wed Oct 20 00:35:29 GMT 2010
    - When using --trace, don't put quotes around stringified references
      to objects
    - Print a usage message when unrecognized non-options are passed
    - Improve the output of --trace by recursively dumping hashes/arrays
    - Call bsd_glob() on filenames before opening them, so we understand
      paths like '~/log_file'
    - Allow .yaml as an extension, not just .yml

0.30  Mon Oct 18 21:03:18 GMT 2010
    - Only load Module::Pluggable when we need it (for --list-plugins)