@@ -16,7 +16,6 @@ sub new {
 sub PCI_register {
     my ($self, $irc, %args) = @_;
 
-    $self->{status}{$irc} = $args{status};
     $irc->raw_events(1) if $self->{Verbose};
 
     if ($self->{Trace}) {
@@ -102,13 +101,14 @@ sub _dump {
 
 sub _event_debug {
     my ($self, $irc, $event, $args) = @_;
+
     pop @$args;
     my @output;
     for my $i (0..$#{ $args }) {
        push @output, "ARG$i: " . _dump(${ $args->[$i] });
     }
 
-    $self->{status}{$irc}->('debug', "$event: ".join(', ', @output));
+    $irc->send_event_next('irc_plugin_status', $self, 'debug', "$event: ".join(', ', @output));
     return;
 }
 
@@ -116,7 +116,7 @@ sub S_connected {
     my ($self, $irc) = splice @_, 0, 2;
     my $address = ${ $_[0] };
     $self->_event_debug($irc, 'S_connected', \@_) if $self->{Trace};
-    $self->{status}{$irc}->('normal', "Connected to server $address");
+    $irc->send_event_next('irc_plugin_status', $self, 'normal', "Connected to server $address");
     return PCI_EAT_NONE;
 }
 
@@ -124,7 +124,7 @@ sub S_disconnected {
     my ($self, $irc) = splice @_, 0, 2;
     my $server = ${ $_[0] };
     $self->_event_debug($irc, 'S_disconnected', \@_) if $self->{Trace};
-    $self->{status}{$irc}->('normal', "Disconnected from server $server");
+    $irc->send_event_next('irc_plugin_status', $self, 'normal', "Disconnected from server $server");
     return PCI_EAT_NONE;
 }
 
@@ -132,7 +132,7 @@ sub S_snotice {
     my ($self, $irc) = splice @_, 0, 2;
     my $notice = _normalize(${ $_[0] });
     $self->_event_debug($irc, 'S_snotice', \@_) if $self->{Trace};
-    $self->{status}{$irc}->('normal', "Server notice: $notice");
+    $irc->send_event_next('irc_plugin_status', $self, 'normal', "Server notice: $notice");
     return PCI_EAT_NONE;
 }
 
@@ -146,7 +146,7 @@ sub S_notice {
         return PCI_EAT_NONE;
     }
 
-    $self->{status}{$irc}->('normal', "Server notice: $notice");
+    $irc->send_event_next('irc_plugin_status', $self, 'normal', "Server notice: $notice");
     return PCI_EAT_NONE;
 }
 
@@ -156,15 +156,15 @@ sub S_001 {
     my $nick = $irc->nick_name();
     my $event = 'S_001 ('.numeric_to_name('001').')';
     $self->_event_debug($irc, 'event', \@_) if $self->{Trace};
-    $self->{status}{$irc}->('normal', "Logged in to server $server with nick $nick");
+    $irc->send_event_next('irc_plugin_status', $self, 'normal', "Logged in to server $server with nick $nick");
     return PCI_EAT_NONE;
 }
 
 sub S_identified {
     my ($self, $irc) = splice @_, 0, 2;
     my $nick = $irc->nick_name();
-    $self->_event_debug($irc, 'S_identified', \@_)if $self->{Trace};
-    $self->{status}{$irc}->('normal', "Identified with NickServ as $nick");
+    $self->_event_debug($irc, 'S_identified', \@_) if $self->{Trace};
+    $irc->send_event_next('irc_plugin_status', $self, 'normal', "Identified with NickServ as $nick");
     return PCI_EAT_NONE;
 }
 
@@ -176,7 +176,7 @@ sub S_nick {
 
     $self->_event_debug($irc, 'S_nick', \@_) if $self->{Trace};
     return PCI_EAT_NONE if $newnick ne $irc->nick_name();
-    $self->{status}{$irc}->('normal', "Nickname changed from $oldnick to $newnick");
+    $irc->send_event_next('irc_plugin_status', $self, 'normal', "Nickname changed from $oldnick to $newnick");
     return PCI_EAT_NONE;
 }
 
@@ -188,7 +188,7 @@ sub S_join {
 
     $self->_event_debug($irc, 'S_join', \@_) if $self->{Trace};
     return PCI_EAT_NONE if $nick ne $irc->nick_name();
-    $self->{status}{$irc}->('normal', "Joined channel $chan");
+    $irc->send_event_next('irc_plugin_status', $self, 'normal', "Joined channel $chan");
     return PCI_EAT_NONE;
 }
 
@@ -203,7 +203,7 @@ sub S_part {
     return PCI_EAT_NONE if $nick ne $irc->nick_name();
     my $msg = "Parted channel $chan";
     $msg .= " ($reason)" if $reason ne '';
-    $self->{status}{$irc}->('normal', $msg);
+    $irc->send_event_next('irc_plugin_status', $self, 'normal', $msg);
     return PCI_EAT_NONE;
 }
 
@@ -219,7 +219,7 @@ sub S_kick {
     return PCI_EAT_NONE if $victim ne $irc->nick_name();
     my $msg = "Kicked from $chan by $kicker";
     $msg .= " ($reason)" if length $reason;
-    $self->{status}{$irc}->('normal', $msg);
+    $irc->send_event_next('irc_plugin_status', $self, 'normal', $msg);
     return PCI_EAT_NONE;
 }
 
@@ -227,7 +227,7 @@ sub S_error {
     my ($self, $irc) = splice @_, 0, 2;
     my $error = _normalize(${ $_[0] });
     $self->_event_debug($irc, 'S_error', \@_) if $self->{Trace};
-    $self->{status}{$irc}->('normal', "Error from IRC server: $error");
+    $irc->send_event_next('irc_plugin_status', $self, 'normal', "Error from IRC server: $error");
     return PCI_EAT_NONE;
 }
 
@@ -241,7 +241,7 @@ sub S_quit {
     return PCI_EAT_NONE if $nick ne $irc->nick_name();
     my $msg = 'Quit from IRC';
     $msg .= " ($reason)" if length $reason;
-    $self->{status}{$irc}->('normal', $msg);
+    $irc->send_event_next('irc_plugin_status', $self, 'normal', $msg);
     return PCI_EAT_NONE;
 }
 
@@ -249,7 +249,7 @@ sub S_socketerr {
     my ($self, $irc) = splice @_, 0, 2;
     my $reason = _normalize(${ $_[0] });
     $self->_event_debug($irc, 'S_socketerr', \@_) if $self->{Trace};
-    $self->{status}{$irc}->('normal', "Failed to connect to server: $reason");
+    $irc->send_event_next('irc_plugin_status', $self, 'normal', "Failed to connect to server: $reason");
     return PCI_EAT_NONE;
 }
 
@@ -257,7 +257,7 @@ sub S_socks_failed {
     my ($self, $irc) = splice @_, 0, 2;
     my $reason = _normalize(${ $_[0] });
     $self->_event_debug($irc, 'S_socks_failed', \@_) if $self->{Trace};
-    $self->{status}{$irc}->('normal', "Failed to connect to SOCKS server: $reason");
+    $irc->send_event_next('irc_plugin_status', $self, 'normal', "Failed to connect to SOCKS server: $reason");
     return PCI_EAT_NONE;
 }
 
@@ -265,7 +265,7 @@ sub S_socks_rejected {
     my ($self, $irc) = splice @_, 0, 2;
     my $code = ${ $_[0] };
     $self->_event_debug($irc, 'S_socks_rejected', \@_) if $self->{Trace};
-    $self->{status}{$irc}->('normal', "Connection rejected by SOCKS server (code $code)");
+    $irc->send_event_next('irc_plugin_status', $self, 'normal', "Connection rejected by SOCKS server (code $code)");
     return PCI_EAT_NONE;
 }
 
@@ -273,7 +273,7 @@ sub S_raw {
     my ($self, $irc) = splice @_, 0, 2;
     my $raw = _normalize(${ $_[0] });
     return PCI_EAT_NONE if !$self->{Verbose};
-    $self->{status}{$irc}->('debug', "<<< $raw");
+    $irc->send_event_next('irc_plugin_status', $self, 'debug', "<<< $raw");
     return PCI_EAT_NONE;
 }
 
@@ -283,7 +283,7 @@ sub S_raw_out {
     $raw = strip_color($raw);
     $raw = strip_formatting($raw);
     return PCI_EAT_NONE if !$self->{Verbose};
-    $self->{status}{$irc}->('debug', ">>> $raw");
+    $irc->send_event_next('irc_plugin_status', $self, 'debug', ">>> $raw");
     return PCI_EAT_NONE;
 }
 
