@@ -1,6 +1,7 @@
 Revision history for App-Pocoirc
 
 {{$NEXT}}
+    - Replace status callbacks with irc_plugin_status events
 
 0.37  Mon Apr 25 23:59:48 GMT 2011
     - Preserve symlinks in all supplied filenames
